munit tests updated

--- a/pom.xml
+++ b/pom.xml
@@ -158,6 +158,9 @@
 							<format>html</format>
 							<format>json</format>
 						</formats>
+						<ignoreFlows>
+							<ignoreFlow>hello-worldFlow</ignoreFlow>       
+					  	</ignoreFlows>
 					</coverage>
 				</configuration>
 			</plugin>
