--- a/mule4/hello-world-api/pom.xml
+++ b/mule4/hello-world-api/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.mule</groupId>
@@ -33,13 +32,13 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-		<app.runtime>4.1.3</app.runtime>
-		<mule.maven.plugin.version>3.1.6</mule.maven.plugin.version>
+		<app.runtime>4.2.1</app.runtime>
+		<mule.maven.plugin.version>3.2.7</mule.maven.plugin.version>
 
 		<api.build.version>v1</api.build.version>
 		<munit.version>2.1.3</munit.version>
 
-		<!-- configiuration of Mule Sonarqube plugin-->
+		<!-- configuration of Mule Sonarqube plugin-->
 		<sonar.language>mule4</sonar.language>
 		<sonar.sources>src/main/mule</sonar.sources>
 
@@ -70,7 +69,7 @@
 					<!-- DEPLOYMENT CONFIG -->
 					<cloudHubDeployment>
 						<uri>https://anypoint.mulesoft.com</uri>
-						<muleVersion>4.1.3</muleVersion>
+						<muleVersion>4.2.1</muleVersion>
 						<username>${MULEANYPOINT_USER}</username>
 						<password>${MULEANYPOINT_PASSWORD}</password>
 						<applicationName>${deployment.app.name.prefix}-${project.artifactId}</applicationName>
